--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 							</ul>
 						</nav>
 
-						<img class="menu__img" src="assets/img/cart.png" alt="cart">
+						<a href=""><img class="menu__img" src="assets/img/cart.png" alt="cart"></a>
 
-						<img class="menu__img" src="assets/img/search.png" alt="search">
+						<a href=""><img class="menu__img" src="assets/img/search.png" alt="search"></a>
 					</div>
 				</div>
 			</div>
@@ -204,6 +204,15 @@
 					<div class="latest-project__project">
 						<div class="latest-project__img-item">
 							<img src="assets/img/project-1.jpg" alt="">
+
+							<div class="latest-project__hover">
+								<div class="latest-project__hover-img">
+									<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
+
+									<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
+								</div>
+
+							</div>
 						</div>
 
 						<div class="latest-project__text-item">
@@ -213,45 +222,27 @@
 						</div>
 					</div>
 
-					<div class="latest-project__hover">
-						<div class="latest-project__hover-img">
-							<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
 
-							<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
-						</div>
-
-						<div class="latest-project__hover-item">
-							<h1 class="latest-project__hover-title">Claritas Etiam Processus</h1>
-
-							<p class="latest-project__hover-info">Photography, Nature</p>
-						</div>
-					</div>
 				</div>
 
 				<div class="col-12 col-sm-6 col-md-4">
 					<div class="latest-project__project">
 						<div class="latest-project__img-item">
 							<img src="assets/img/project-2.jpg" alt="">
+
+							<div class="latest-project__hover">
+								<div class="latest-project__hover-img">
+									<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
+
+									<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
+								</div>
+							</div>
 						</div>
 
 						<div class="latest-project__text-item">
 							<h1 class="latest-project__project-title">Quam Nutamus Farum</h1>
 
 							<p class="latest-project__project-info">Graphic Design, Mock-Up</p>
-						</div>
-					</div>
-
-					<div class="latest-project__hover">
-						<div class="latest-project__hover-img">
-							<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
-
-							<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
-						</div>
-
-						<div class="latest-project__hover-item">
-							<h1 class="latest-project__hover-title">Quam Nutamus Farum</h1>
-
-							<p class="latest-project__hover-info">Graphic Design, Mock-Up</p>
 						</div>
 					</div>
 				</div>
@@ -260,26 +251,20 @@
 					<div class="latest-project__project">
 						<div class="latest-project__img-item">
 							<img src="assets/img/project-3.jpg" alt="">
+
+							<div class="latest-project__hover">
+								<div class="latest-project__hover-img">
+									<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
+
+									<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
+								</div>
+							</div>
 						</div>
 
 						<div class="latest-project__text-item">
 							<h1 class="latest-project__project-title">Usus Legentis Videntur</h1>
 
 							<p class="latest-project__project-info">Photography, Holiday</p>
-						</div>
-					</div>
-
-					<div class="latest-project__hover">
-						<div class="latest-project__hover-img">
-							<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
-
-							<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
-						</div>
-
-						<div class="latest-project__hover-item">
-							<h1 class="latest-project__hover-title">Usus Legentis Videntur</h1>
-
-							<p class="latest-project__hover-info">Photography, Holiday</p>
 						</div>
 					</div>
 				</div>
@@ -288,6 +273,15 @@
 					<div class="latest-project__project">
 						<div class="latest-project__img-item">
 							<img src="assets/img/project-4.jpg" alt="">
+
+							<div class="latest-project__hover">
+								<div class="latest-project__hover-img">
+									<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
+
+									<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
+								</div>
+
+							</div>
 						</div>
 
 						<div class="latest-project__text-item">
@@ -296,26 +290,20 @@
 							<p class="latest-project__project-info">Photography, Nature</p>
 						</div>
 					</div>
-
-					<div class="latest-project__hover">
-						<div class="latest-project__hover-img">
-							<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
-
-							<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
-						</div>
-
-						<div class="latest-project__hover-item">
-							<h1 class="latest-project__hover-title">Claritas Etiam Processus</h1>
-
-							<p class="latest-project__hover-info">Photography, Nature</p>
-						</div>
-					</div>
 				</div>
 
 				<div class="col-12 col-sm-6 col-md-4">
 					<div class="latest-project__project">
 						<div class="latest-project__img-item">
 							<img src="assets/img/project-5.jpg" alt="">
+
+							<div class="latest-project__hover">
+								<div class="latest-project__hover-img">
+									<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
+
+									<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
+								</div>
+							</div>
 						</div>
 
 						<div class="latest-project__text-item">
@@ -324,46 +312,26 @@
 							<p class="latest-project__project-info">Graphic Design, Mock-Up</p>
 						</div>
 					</div>
-
-					<div class="latest-project__hover">
-						<div class="latest-project__hover-img">
-							<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
-
-							<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
-						</div>
-
-						<div class="latest-project__hover-item">
-							<h1 class="latest-project__hover-title">Quam Nutamus Farum<</h1>
-
-							<p class="latest-project__hover-info">Graphic Design, Mock-Up</p>
-						</div>
-					</div>
 				</div>
 
 				<div class="col-12 col-sm-6 col-md-4">
 					<div class="latest-project__project">
 						<div class="latest-project__img-item">
 							<img src="assets/img/project-6.jpg" alt="">
+
+							<div class="latest-project__hover">
+								<div class="latest-project__hover-img">
+									<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
+
+									<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
+								</div>
+							</div>
 						</div>
 
 						<div class="latest-project__text-item">
 							<h1 class="latest-project__project-title">Usus Legentis Videntur</h1>
 
 							<p class="latest-project__project-info">Photography, Holiday</p>
-						</div>
-					</div>
-
-					<div class="latest-project__hover">
-						<div class="latest-project__hover-img">
-							<a href=""><img src="assets/img/latest-project-hover-1.png" alt=""></a>
-
-							<a href=""><img src="assets/img/latest-project-hover-2.png" alt=""></a>
-						</div>
-
-						<div class="latest-project__hover-item">
-							<h1 class="latest-project__hover-title">Usus Legentis Videntur</h1>
-
-							<p class="latest-project__hover-info">Photography, Holiday</p>
 						</div>
 					</div>
 				</div>
@@ -496,6 +464,7 @@
 				<div class="col-12 col-md-8">
 					<div class="recent-posts__item">
 						<h1 class="recent-posts__title">Recent Posts.</h1>
+
 						<p class="recent-posts__info">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
 					</div>
 				</div>
@@ -506,6 +475,10 @@
 					<div class="recent-posts__post">
 						<div class="recent-posts__photo">
 							<img src="assets/img/recent-posts-photo-1.jpg" alt="">
+
+							<div class="recent-posts__hover">
+
+							</div>
 						</div>
 
 						<div class="recent-posts__text">
@@ -524,27 +497,6 @@
 							<div class="recent-posts__month">
 								<p class="recent-posts__month-number">Sep.</p>
 							</div>
-						</div>
-
-						<div class="recent-posts__hover">
-							<div class="recent-posts__text recent-posts__text-hover">
-								<h1 class="recent-posts__title-post recent-posts__title-post-hover">Lorem ipsum dolor sit amet</h1>
-
-								<p class="recent-posts__info-post recent-posts__info-post-hover">Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
-
-								<a href="" class="recent-posts__read-more">Read More <img src="assets/img/recent-posts-icon.png" alt=""></a>
-							</div>
-
-							<div class="recent-posts__date">
-								<div class="recent-posts__day recent-posts__day-hover">
-									<p class="recent-posts__day-number">30</p>
-								</div>
-
-								<div class="recent-posts__month recent-posts__month-hover">
-									<p class="recent-posts__month-number">Sep.</p>
-								</div>
-							</div>
-
 						</div>
 					</div>
 				</div>
@@ -553,6 +505,10 @@
 					<div class="recent-posts__post">
 						<div class="recent-posts__photo">
 							<img src="assets/img/recent-posts-photo-2.jpg" alt="">
+
+							<div class="recent-posts__hover">
+
+							</div>
 						</div>
 
 						<div class="recent-posts__text">
@@ -571,27 +527,6 @@
 							<div class="recent-posts__month">
 								<p class="recent-posts__month-number">Sep.</p>
 							</div>
-						</div>
-
-						<div class="recent-posts__hover">
-							<div class="recent-posts__text recent-posts__text-hover">
-								<h1 class="recent-posts__title-post recent-posts__title-post-hover">Lorem ipsum dolor sit amet</h1>
-
-								<p class="recent-posts__info-post recent-posts__info-post-hover">Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
-
-								<a href="" class="recent-posts__read-more">Read More <img src="assets/img/recent-posts-icon.png" alt=""></a>
-							</div>
-
-							<div class="recent-posts__date">
-								<div class="recent-posts__day recent-posts__day-hover">
-									<p class="recent-posts__day-number">30</p>
-								</div>
-
-								<div class="recent-posts__month recent-posts__month-hover">
-									<p class="recent-posts__month-number">Sep.</p>
-								</div>
-							</div>
-
 						</div>
 					</div>
 				</div>
@@ -600,6 +535,10 @@
 					<div class="recent-posts__post">
 						<div class="recent-posts__photo">
 							<img src="assets/img/recent-posts-photo-3.jpg" alt="">
+
+							<div class="recent-posts__hover">
+
+							</div>
 						</div>
 
 						<div class="recent-posts__text">
@@ -618,27 +557,6 @@
 							<div class="recent-posts__month">
 								<p class="recent-posts__month-number">Sep.</p>
 							</div>
-						</div>
-
-						<div class="recent-posts__hover">
-							<div class="recent-posts__text recent-posts__text-hover">
-								<h1 class="recent-posts__title-post recent-posts__title-post-hover">Lorem ipsum dolor sit amet</h1>
-
-								<p class="recent-posts__info-post recent-posts__info-post-hover">Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
-
-								<a href="" class="recent-posts__read-more">Read More <img src="assets/img/recent-posts-icon.png" alt=""></a>
-							</div>
-
-							<div class="recent-posts__date">
-								<div class="recent-posts__day recent-posts__day-hover">
-									<p class="recent-posts__day-number">30</p>
-								</div>
-
-								<div class="recent-posts__month recent-posts__month-hover">
-									<p class="recent-posts__month-number">Sep.</p>
-								</div>
-							</div>
-
 						</div>
 					</div>
 				</div>
